<resources>
    <string name="app_name">CapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_empty_error">Please write your username</string>
    <string name="email_invalid_error">Please enter a valid username</string>
    <string name="email_invalid_password">Password must be at least 8 characters</string>
    <string name="login_success_message">Welcome to our world</string>
    <string name="singup_success_message">Registration Successful</string>
    <string name="or_sing_up"><u>Or Sing Up</u></string>
    <string name="sing_up_page">Sing Up Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_surname">Name Surname</string>
    <string name="telephone">Telephone</string>
    <string name="sing_up">Sing Up</string>
    <string name="your_profile">Your Profile</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="miyuki_design_shop">Miyuki Design Shop</string>
    <string name="user_name_email_address">User Name/ Email Address</string>
    <string name="log_in">LOG IN</string>
    <string name="sing_up_login">SING UP</string>
    <string name="your_basket">Your Basket</string>
    <string name="products">Products</string>
    <string name="promotion">Promotion</string>
    <string name="basket_b">basket</string>
    <string name="profile_b">profile</string>
</resources>